Merge Changes from feature/3.9.4 Branch